servicem.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: capstone-lab
  labels:
    app.kubernetes.io/name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: myapp
  template:
    metadata:
      labels:
        app.kubernetes.io/name: myapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"        # adjust to your app port
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: myapp
        image: nginx
        ports:
        - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: capstone-lab
  labels:
    app.kubernetes.io/name: myapp
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: myapp
